Fixed development tool template error.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I93068b49d59f52f2ddebedc75232855f94e14c07

--- a/ossii/src/development-tools/module-template/Makefile.am
+++ b/ossii/src/development-tools/module-template/Makefile.am
@@ -70,7 +70,7 @@ endif
 
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(MODULE_DATA_DIR)/l10n
-	cp -aR l10n/. $(DESTDIR)/$(MODULE_DATA_DIR)/l10n
+	cp -aR browser/l10n/. $(DESTDIR)/$(MODULE_DATA_DIR)/l10n
 if CUSTOM_HTML
 	$(MKDIR_P) $(DESTDIR)/$(MODULE_DATA_DIR)/html
 	cp -aR html/. $(DESTDIR)/$(MODULE_DATA_DIR)/html
