Added front-end tools for management interface
They are: Form, Dialog and Toast.
To simplify front-end module design time.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I297c5a32b7185851928f82d747d4dee2ae6582b9

--- a/ossii/browser/admin/Makefile.am
+++ b/ossii/browser/admin/Makefile.am
@@ -10,6 +10,9 @@ ADMIN_SRC_JS = \
 	src/AdminSocketBase.js \
 	$(top_srcdir)/browser/src/core/Util.js \
 	$(top_srcdir)/browser/src/core/Class.js \
+	src/Form.js \
+	src/Dialog.js \
+	src/Toast.js \
 	src/AdminModule.js \
 	src/Main.js
 
