Fixed the problem of module template missing package browser directory
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I3f1458e3c3c9e3b38a5b850d212b7310c3e212dd

--- a/ossii/src/development-tools/module-template/Makefile.am
+++ b/ossii/src/development-tools/module-template/Makefile.am
@@ -69,8 +69,8 @@ module_LTLIBRARIES = @MODULE_NAME@.la
 endif
 
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/$(MODULE_DATA_DIR)/l10n
-	cp -aR browser/l10n/. $(DESTDIR)/$(MODULE_DATA_DIR)/l10n
+	$(MKDIR_P) $(DESTDIR)/$(MODULE_DATA_DIR)/browser/l10n
+	cp -aR browser/l10n/. $(DESTDIR)/$(MODULE_DATA_DIR)/browser/l10n
 if CUSTOM_HTML
 	$(MKDIR_P) $(DESTDIR)/$(MODULE_DATA_DIR)/html
 	cp -aR html/. $(DESTDIR)/$(MODULE_DATA_DIR)/html
