--- a/ossii/src/development-tools/module-template/module.spec.in
+++ b/ossii/src/development-tools/module-template/module.spec.in
@@ -37,7 +37,7 @@ find $RPM_BUILD_ROOT -name '*.la' -exec rm -f {} ';'
 %files
 %config(noreplace) %attr(640, lool, root) @OXOOL_MODULE_CONFIG_DIR@/*
 %dir @OXOOL_MODULE_DATA_DIR@/@MODULE_NAME@
-@OXOOL_MODULE_DATA_DIR@/@MODULE_NAME@/l10n/*
+@OXOOL_MODULE_DATA_DIR@/@MODULE_NAME@/browser/l10n/*
 
 %if "%{BUILD_SHARED_LIBRARY}" == "true"
 @OXOOL_MODULES_DIR@/*
