Fix deprecated ENV instruction format in the from-packages Dockerfile
This patch fixes the following `docker build` warning:

```
 => WARN: LegacyKeyValueFormat: "ENV key=value" should be used instead of legacy...
```

Signed-off-by: Buo-ren Lin <buoren.lin@ossii.com.tw>

--- a/docker/from-packages/Dockerfile
+++ b/docker/from-packages/Dockerfile
@@ -20,7 +20,7 @@ ARG onlinetag
 LABEL commit.history.online="https://github.com/OSSII/oxool-community/commits/${onlinetag}"
 
 # UTF-8 locale is needed to handle file names with non-ASCII characters
-ENV LC_CTYPE C.UTF-8
+ENV LC_CTYPE=C.UTF-8
 
 RUN \
 # Update repos before installing packages
