Implement example Docker Compose configuration file for the container installation
Signed-off-by: Buo-ren Lin <buoren.lin@ossii.com.tw>

--- a/docker/from-packages/.gitignore
+++ b/docker/from-packages/.gitignore
@@ -1,2 +1,5 @@
+# Don't track Docker container bind mounts
+/config*
+
 # Don't track built RPM packages that is used to build the container images
 *.rpm
