Fix invalid YAML syntax in the Docker Compose configuration file of the from-packages container variant
Signed-off-by: Buo-ren Lin <buoren.lin@ossii.com.tw>

--- a/docker/from-packages/docker-compose.yaml
+++ b/docker/from-packages/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - type: bind
         source: ./config
         target: /etc/oxool
-    environment:
+    environment: {}
       # Fix time presentation
       #- TZ=CST-8
     ports:
