Fix missing restart property of the oxool container of the from-packages variant Docker Compose configuration file
Signed-off-by: Buo-ren Lin <buoren.lin@ossii.com.tw>

--- a/docker/from-packages/docker-compose.yaml
+++ b/docker/from-packages/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
       # docker --ulimit does not support unlimited or large numbers · Issue #12515 · moby/moby
       # https://github.com/moby/moby/issues/12515
       nproc: -1
+    restart: always
 
   # Nextcloud service container for demonstration
   nextcloud:
